<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/emailTextBox"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/defaultHeight"
        android:autofillHints="emailAddress"
        android:ems="15"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/defaultHeight"
        android:ems="15"
        android:inputType="textPersonName"
        android:hint="@string/fullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextBox"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/passwordTextBox"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/defaultHeight"
        android:autofillHints="password"
        android:ems="15"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/passwordAgainTextBox"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/defaultHeight"
        android:autofillHints="password"
        android:ems="15"
        android:hint="@string/passwordAgain"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextBox" />

    <EditText
        android:id="@+id/postAddressTextBox"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/defaultHeight"
        android:ems="15"
        android:inputType="textPostalAddress"
        android:hint="@string/postAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordAgainTextBox"
        android:autofillHints="postalAddress" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="@dimen/defaultHeight"
        android:onClick="register"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postAddressTextBox"
        app:layout_constraintVertical_bias="0.202" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="150dp"
        android:layout_height="@dimen/defaultHeight"
        android:onClick="back"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintVertical_bias="0.079" />


</androidx.constraintlayout.widget.ConstraintLayout>